--- a/Day 09/Tutorial/Day_09_Linear_Regression_single_variable.ipynb
+++ b/Day 09/Tutorial/Day_09_Linear_Regression_single_variable.ipynb
@@ -3,9 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": [],
-      "authorship_tag": "ABX9TyMmlQZdlGBrWsQLj14fBG5H",
-      "include_colab_link": true
+      "provenance": []
     },
     "kernelspec": {
       "name": "python3",
@@ -16,16 +14,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/rajsecrets/Machine-learning-21-day-challenge/blob/main/Day_09_Linear_Regression_single_variable.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "markdown",
       "source": [
@@ -45,7 +33,7 @@
     {
       "cell_type": "code",
       "source": [
-        "import numpy as np\n",
+        "import numpy as np one\n",
         "import pandas as pd\n",
         "import matplotlib.pyplot as plt\n",
         "from sklearn import linear_model"
