--- a/Day 10/Exercises/q10.md
+++ b/Day 10/Exercises/q10.md
@@ -1,34 +1,31 @@
-# **LINEAR REGRESSION - MULTIPLE VARIABLES**
 
-📺 **Video Tutorial: [Watch Here](https://youtube.com/your_video_link)**
+# 🚀 **LINEAR REGRESSION - MULTIPLE VARIABLES**
 
-## **Task Overview**
+📺 **Video Tutorial: [Watch Here](https://youtu.be/u9t7JrX_xEA)**
 
-In this exercise, we'll dive into multiple variable linear regression. Before proceeding, make sure to watch the provided video tutorial for a solid understanding.
+## **Task Overview 📚**
 
-### **Exercise Details**
+In this task, we're diving into the exciting world of linear regression with multiple variables. No prerequisites needed – just sit back, relax, and absorb the knowledge from the fantastic video tutorial.
 
-**Dataset:** `hiring.csv`
+The dataset for this exercise can be found [here](https://github.com/rajsecrets/Machine-learning-21-day-challenge/blob/main/Day%2010/Exercises/q10.md).
 
-**Objective:** Build a machine learning model for the HR department using candidate's experience, written test score, and personal interview score to predict future salaries.
+## **Exercise Details 🏋️**
 
-### **Predict Salaries for Candidates**
+In the exercise folder (same level as this notebook on GitHub), discover the treasures within the `hiring.csv` file. This dataset spills the beans on a firm's hiring statistics, including experience, written test scores, and personal interview scores. Your mission: build a machine learning model to empower the HR department in setting salaries for future candidates.
 
-1. 🕵️‍♂️ **Candidate 1:**
+## **Predict Salaries for Candidates 💰**
 
-   - Experience: 2 years
-   - Test Score: 9
-   - Interview Score: 6
-2. 🕵️‍♂️ **Candidate 2:**
+Using the magic of your trained model, gaze into the future and predict salaries for these candidates:
 
-   - Experience: 12 years
-   - Test Score: 10
-   - Interview Score: 10
+1. Candidate with 2 years of experience, a test score of 9, and an interview score of 6.
+2. Candidate with 12 years of experience, a test score of 10, and an interview score of 10.
 
-### **Procedure**
+## **Important Note 🚨**
 
-1. 📂 **Dataset:** Find the `hiring.csv` file in the exercise folder (same level as this notebook) on GitHub.
-2. 🤖 **Build Model:** Utilize the provided dataset to construct a robust machine learning model for predicting salaries.
-3. 🚀 **Make Predictions:** Apply the trained model to predict salaries for the specified candidates based on their experience, test scores, and interview scores.
+- Remember to catch the wave of knowledge by watching the video tutorial before embarking on your machine learning journey.
 
-## **Ready to Shape the Future! 💼🌐**
+## **Resources 📂**
+
+- 📂 **Exercise Data:** [Hiring Dataset](https://github.com/rajsecrets/Machine-learning-21-day-challenge/blob/main/Day%2010/Exercises/q10.md)
+
+## **Unleash the Power of Predictions! 🌟**
