--- a/Day 10/Tutorial/Day_10_Linear_Regression_Multiple_Variables.ipynb
+++ b/Day 10/Tutorial/Day_10_Linear_Regression_Multiple_Variables.ipynb
@@ -1,21 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "zes_f8CMZxyk"
+      },
       "source": [
         "## Details : Day 10\n",
         "\n",
@@ -33,48 +22,42 @@
         "4. Plot graph for visualisation\n",
         "5. Make a regression function and fit the dataset\n",
         "6. Make predictions"
-      ],
-      "metadata": {
-        "id": "zes_f8CMZxyk"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "#1. Import libraries"
-      ],
       "metadata": {
         "id": "df0hYDaKVgRD"
-      }
+      },
+      "source": [
+        "#1. Import libraries"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 46,
+      "metadata": {
+        "id": "GXo4GI0sHLEs"
+      },
+      "outputs": [],
       "source": [
         "import numpy as np\n",
         "import pandas as pd\n",
         "from sklearn import linear_model"
-      ],
-      "metadata": {
-        "id": "GXo4GI0sHLEs"
-      },
-      "execution_count": 46,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "#2. Load Dataset"
-      ],
       "metadata": {
         "id": "SuV_z5raVogL"
-      }
+      },
+      "source": [
+        "#2. Load Dataset"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "df = pd.read_csv(\"homeprices02.csv\")\n",
-        "df"
-      ],
+      "execution_count": 47,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -83,20 +66,9 @@
         "id": "jRuN5DTMHLBv",
         "outputId": "84a05fac-3270-4553-bf9f-ea62f032957b"
       },
-      "execution_count": 47,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
-            "text/plain": [
-              "   area  bedrooms  age   price\n",
-              "0  2600       3.0   20  550000\n",
-              "1  3000       4.0   15  565000\n",
-              "2  3200       NaN   18  610000\n",
-              "3  3600       3.0   30  595000\n",
-              "4  4000       5.0    8  760000\n",
-              "5  4100       6.0    8  810000"
-            ],
             "text/html": [
               "\n",
               "  <div id=\"df-76bee5f7-7b0f-4312-aa13-cc6edfca91c5\" class=\"colab-df-container\">\n",
@@ -434,39 +406,50 @@
               "\n",
               "    </div>\n",
               "  </div>\n"
+            ],
+            "text/plain": [
+              "   area  bedrooms  age   price\n",
+              "0  2600       3.0   20  550000\n",
+              "1  3000       4.0   15  565000\n",
+              "2  3200       NaN   18  610000\n",
+              "3  3600       3.0   30  595000\n",
+              "4  4000       5.0    8  760000\n",
+              "5  4100       6.0    8  810000"
             ]
           },
+          "execution_count": 47,
           "metadata": {},
-          "execution_count": 47
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "df = pd.read_csv(\"homeprices02.csv\")\n",
+        "df"
       ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "#3. fill NA value"
-      ],
       "metadata": {
         "id": "ui67LayHVuqu"
-      }
+      },
+      "source": [
+        "#3. fill NA value"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "median = df.bedrooms.median()"
-      ],
+      "execution_count": 55,
       "metadata": {
         "id": "-CoVSEltL3Ki"
       },
-      "execution_count": 55,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "median = df.bedrooms.median()"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "df.bedrooms = df.bedrooms.fillna(median)\n",
-        "df.bedrooms"
-      ],
+      "execution_count": 56,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -474,10 +457,8 @@
         "id": "ZiRuOASFL3FI",
         "outputId": "7662a9d9-5b06-4c2a-9afa-89439052f3fc"
       },
-      "execution_count": 56,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "0    3.0\n",
@@ -489,17 +470,19 @@
               "Name: bedrooms, dtype: float64"
             ]
           },
+          "execution_count": 56,
           "metadata": {},
-          "execution_count": 56
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "df.bedrooms = df.bedrooms.fillna(median)\n",
+        "df.bedrooms"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "reg = linear_model.LinearRegression()\n",
-        "reg.fit(df[['area','bedrooms','age']], df.price)"
-      ],
+      "execution_count": 59,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -508,28 +491,29 @@
         "id": "QE_VvHrBL29V",
         "outputId": "edaa3cec-1708-46af-d68e-fe2561340b53"
       },
-      "execution_count": 59,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
-            "text/plain": [
-              "LinearRegression()"
-            ],
             "text/html": [
               "<style>#sk-container-id-1 {color: black;background-color: white;}#sk-container-id-1 pre{padding: 0;}#sk-container-id-1 div.sk-toggleable {background-color: white;}#sk-container-id-1 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-1 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-1 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-1 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-1 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-1 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-1 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-1 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-1 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-1 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-1 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-1 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-1 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-1 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-1 div.sk-item {position: relative;z-index: 1;}#sk-container-id-1 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-1 div.sk-item::before, #sk-container-id-1 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-1 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-1 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-1 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-1 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-1 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-1 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-1 div.sk-label-container {text-align: center;}#sk-container-id-1 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-1 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-1\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>LinearRegression()</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-1\" type=\"checkbox\" checked><label for=\"sk-estimator-id-1\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">LinearRegression</label><div class=\"sk-toggleable__content\"><pre>LinearRegression()</pre></div></div></div></div></div>"
+            ],
+            "text/plain": [
+              "LinearRegression()"
             ]
           },
+          "execution_count": 59,
           "metadata": {},
-          "execution_count": 59
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "reg = linear_model.LinearRegression()\n",
+        "reg.fit(df[['area','bedrooms','age']], df.price)"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "reg.predict([[3000,3, 40]])"
-      ],
+      "execution_count": 63,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -537,45 +521,70 @@
         "id": "1W4CTPTbWgcv",
         "outputId": "30f1003f-6e23-41c8-f5b4-7403757f9325"
       },
-      "execution_count": 63,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stderr",
+          "output_type": "stream",
           "text": [
             "/usr/local/lib/python3.10/dist-packages/sklearn/base.py:439: UserWarning: X does not have valid feature names, but LinearRegression was fitted with feature names\n",
             "  warnings.warn(\n"
           ]
         },
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "array([498408.25158031])"
             ]
           },
+          "execution_count": 63,
           "metadata": {},
-          "execution_count": 63
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "reg.predict([[3000,3, 40]])"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Exercise\n",
+        "\n",
+        "https://github.com/rajsecrets/Machine-learning-21-day-challenge/tree/main/Day%2010/Exercises"
       ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
       "metadata": {
         "id": "t5TjJfBjWgYm"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
       "metadata": {
         "id": "Avo_fCPmWgTh"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
